# rust-x86_64-kernel

./: .commit-msg.tmp  .gitignore  LICENSE  Makefile  README.md
abi/: Cargo.toml
abi/src/: errno.rs  fb.rs  gfx.rs  input.rs  ipc.rs  lib.rs  shm.rs  syscall_nr.rs
docs/: HIGHER_HALF_KASLR.md  PHASE_V_GFX_ABI.md  SHELL_TO_USERLAND.md  SMP.md  design.md
kernel/: Cargo.toml  Makefile  README.md  linker.ld  x86_64-kernel.json
kernel/boot/: boot.asm  boot_64.asm  context_switch.asm  kernel_ctx.asm  multiboot_header.asm  preempt_entry.asm  syscall_entry.asm  user_enter.asm
kernel/grub/: grub.cfg
kernel/scripts/: run-qemu.sh  test-http.sh
kernel/src/: boot_info.rs  main.rs  persist.rs  tests.rs
kernel/src/acpi/: mod.rs
kernel/src/arch/x86_64/: apic.rs  backtrace.rs  gdt.rs  idt.rs  mod.rs  percpu.rs  pic.rs
kernel/src/crypto/: mod.rs  sha256.rs
kernel/src/drivers/: ata.rs  console.rs  e1000.rs  ext2.rs  fat32.rs  fb.rs  font8x16.rs  font8x16_data.rs  keyboard.rs  mod.rs  mouse.rs  nvme.rs  part.rs  serial.rs  vga.rs
kernel/src/fs/: elf.rs  mod.rs  ramfs.rs  userprog.rs
kernel/src/gfx/: fb_info.rs  input_queue.rs  mod.rs
kernel/src/ipc/: mod.rs
kernel/src/memory/: address_space.rs  cow.rs  frame_allocator.rs  frame_refcount.rs  heap.rs  mod.rs  paging.rs
kernel/src/net/: dns.rs  http.rs  mod.rs  socket.rs
kernel/src/pci/: mod.rs
kernel/src/shell/: mod.rs  tty_login.rs
kernel/src/syscall/: mod.rs
kernel/src/task/: executor.rs  mod.rs  preempt.rs  process.rs  signal.rs  thread.rs
kernel/src/time/: mod.rs  sleep.rs
kernel/src/users/: mod.rs
kernel/src/virtio/: gpu.rs  mod.rs  queue.rs
tools/: README.md
userland/: Cargo.toml  README.md  link.ld  x86_64-user.json
userland/.cargo/: config.toml
userland/crates/ulib/: Cargo.toml
userland/displayd/: Cargo.toml
userland/displayd/src/: main.rs
userland/init/: Cargo.toml
userland/sh/: Cargo.toml
(+8 files in other folders)
